--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@ You can detect any type of image/ audio/ video from a text and show those elemen
     <head>
 
         <title>url detector</title>
-
+        <link rel="stylesheet" href="styles.css">
+</head>
+    <body>
         <div id="msg"></div>
 
        <div id="inpDiv">
@@ -30,9 +32,9 @@ You can detect any type of image/ audio/ video from a text and show those elemen
 
        </div>
 
-    </head>
+    
 
-    <body>
+    
 
         <script>
 
